
* `dice()` implements the Dice similarity.

* `fowlkes_mallows()` implements the Folkes-Mallows index.

* `phi()` implements the Phi coefficient.

* `rogers_tanimoto()` implements the Rogers-Tanimoto similarity.

* `russel_rao()` implements the Russel-Rao similarity.

* `sokal_sneath()` implements the Sokal-Sneath similarity.

MISCELLANEOUS

* Simplified the naming of the similarity indices. For example, `jaccard_indep()`
  is now `jaccard()`, and `rand_indep()` is now `rand()`.

clusteval 0.1
-------------

NEW FEATURES

* First version of the `clusteval` package. With this package, we aim to provide
  tools to evaluate the quality of clusterings and individual clusters obtained
  by applying a clustering algorithm to a data set.

CLUSTER EVALUATION METHODS

* `clustomit()` is an implementation of the ClustOmit statistic, which assesses
  the cluster omission admissibility condition from Fisher and Van Ness (1971)
  to evaluate the stability of a clustering algorithm applied to a data set.
  The sampling distribution of the ClustOmit statistic is approximated with a
  stratifed, nonparametric bootstrapping scheme, which we compute with the
  `mclapply()` function in the `parallel` package.

CLUSTER SIMILARITY

* `cluster_similarity()` computes the similarity between the cluster labels
  determined by two clustering algorithms applied to the same data set.
  Currently, we have implemented the Jaccard coefficient and the Rand index, each
  of which result in proportions with values near 1 suggesting similar
  clusterings, while values near 0 suggest dissimilar clusterings.

* `comembership()` calculates the comemberships of all pairs of a vector of
  clustering labels. Two observations are said to be comembers if they are
  clustered together. We use the `Rcpp` package to calculate quickly the
  comemberships for all observations pairs.

* `comembership_table()` calculates the comemberships of all pairs of a vector of