@@ -1,20 +1,33 @@
 #' Creates a list of indices for a stratified nonparametric bootstrap.
 #'
-#' This function creates a list of indices for a stratified nonparametric
-#' bootstrap. Corresponding to our Cluster Omission Stability statistic
-#' implemented in \code{\link{clustomit}}, we omit each group in turn and
-#' perform a stratified bootstrap without the group. We denote the number of
-#' groups as \code{K}, which is equal to \code{nlevels(factor(y))}.
-#' Specifically, suppose that we omit the \eqn{k}th group. That is, we ignore
-#' all of the observations corresponding to group \eqn{k}. Then, we sample with
-#' replacement from each of the remaining groups (i.e., every group except for
-#' group \eqn{k}), yielding a set of bootstrap indices.
+#' This function creates a list of indices for a nonparametric bootstrap.
+#' Corresponding to our ClustOmit statistic implemented in
+#' \code{\link{clustomit}}, we omit each cluster in turn and then sample from
+#' the remaining clusters. We denote the number of groups as \code{K}, which is
+#' equal to \code{nlevels(factor(y))}. Specifically, suppose that we omit the
+#' \eqn{k}th group. That is, we ignore all of the observations corresponding to
+#' group \eqn{k}. Then, we sample with replacement from each of the remaining
+#' groups (i.e., every group except for group \eqn{k}), yielding a set of
+#' bootstrap indices.
 #'
+#' The bootstrap resampling employed randomly samples from the remaining
+#' observations after a cluster is omitted. By default, we ensure that one
+#' observation is selected from each remaining cluster to avoid potential
+#' situations where the resampled data set contains multiple replicates of a
+#' single observation. Optionally, by setting the \code{stratified} argument to
+#' \code{TRUE}, we employ a stratified sampling scheme, where instead we sample
+#' with replacement from each cluster. In this case, the number of observations
+#' sampled from a cluster is equal to the number of observations originally
+#' assigned to that cluster (i.e., its cluster size).
 #' The returned list contains \eqn{K \times num_reps} elements.
+#'
+#' Both resampling schemes ensure that we avoid errors when clustering, similar
+#' to this post on R Help:
+#' \url{https://stat.ethz.ch/pipermail/r-help/2004-June/052357.html}.
 #'
 #' @export
 #' @param y a vector that denotes the grouping of each observation. It must be
-#' coercible with \code{as.factor}.
+#' coercible with \code{\link{as.factor}}.
 #' @param num_reps the number of bootstrap replications to use for each group
 #' @return named list containing indices for each bootstrap replication
 #' @examples
@@ -30,31 +43,66 @@
 #' }))
 #'
 #' # Use 20 reps per group.
-#' boot_stratified_omit(y, num_reps = 20)
+#' boot_omit(y, num_reps = 20)
 #'
 #' # Use the default number of reps per group.
-#' boot_stratified_omit(y)
-boot_stratified_omit <- function(y, num_reps = 50) {
+#' boot_omit(y)
+boot_omit <- function(y, num_reps = 50, stratified = FALSE) {
   y <- as.factor(y)
-
-  # A sequence that indexes each bootstrap replication
-  seq_reps <- seq_len(num_reps)
 
   # Creates a list with each named element containing the indices of its cluster
   # members
   y_index <- split(seq_along(y), y)
 
-  # We create a list, where each element contains the indices (rows) to apply the
-  # clustering algorithm to examine its stability. This is effectively our
-  # approach to stratified sampling. Once we have computed a similarity score for
-  # each bootstrap rep, we can determine the corresponding omitted cluster with
-  # the 'unsplit' function.
+  # We create a list, where each element contains the indices (rows) to apply
+  # the clustering algorithm to examine its stability.
   boot_indices <- lapply(seq_len(nlevels(y)), function(omit_k) {
-    lapply(seq_reps, function(b) {
-      unlist(lapply(y_index[-omit_k], sample, replace = TRUE), use.names = FALSE)
-    })
+    y_omitted <- y_index[-omit_k]
+    # If stratified is selected, then we apply 'sample_vector' to the indices
+    # from each cluster.
+    if (stratified) {
+      replicate(n = num_reps, {
+        unlist(lapply(y_omitted, sample_vector, replace = TRUE),
+               use.names = FALSE)
+      }, simplify = FALSE)
+    } else {
+      # By default, first we randomly sample a single observation from each
+      # cluster. Then, we sample with replacement from the indices with the
+      # current cluster omitted. The resulting number of labels is the length of
+      # 'unlist(y_index[-omit_k])'
+      replicate(n = num_reps, {
+        first_draw <- unlist(lapply(y_omitted, sample_vector, size = 1),
+               use.names = FALSE)
+        y_omitted <- unlist(y_omitted, use.names = FALSE)
+        second_draw <- sample(y_omitted, replace = TRUE,
+                              size = length(y_omitted) - length(first_draw))
+        c(first_draw, second_draw)
+      }, simplify = FALSE)
+    }
   })
+  
   boot_indices <- unlist(boot_indices, recursive = FALSE)
-  names(boot_indices) <- paste("Rep", seq_along(boot_indices), sep = "")
+  names(boot_indices) <- paste0("Rep", seq_along(boot_indices))
   boot_indices
+}
+
+#' Wrapper function to sample from a vector without any convenience features
+#'
+#' This function is a wrapper for the base \code{\link[base]{sample}} function
+#' that circumvents the _undesired behavior_ from the _convenience feature_
+#' discussed in the function's documentation.
+#'
+#' For example, if \code{x} contains a single element, say, 42, we wish
+#' \code{sample(42)} to return only \code{42} rather than a random permutation
+#' of \code{1:42}.
+#' 
+#' @param x vector
+#' @param ... additional arguments passed to \code{\link[base]{sample}}
+#' @return a vector containing a random permutation of \code{x}
+sample_vector <- function(x, ...) {
+  if (length(x) > 1) {
+    sample(x, ...)
+  } else {
+    x
+  }
 }
