@@ -3,9 +3,10 @@
 \title{ClustOmit - Cluster Stability Evaluation via Cluster Omission}
 \usage{
   clustomit(x, K, cluster_method,
-    similarity = c("jaccard", "rand"),
-    weighted_mean = TRUE, num_reps = 50,
-    num_cores = getOption("mc.cores", 2), ...)
+    similarity = c("adjusted_rand", "jaccard", "rand"),
+    weighted_mean = TRUE, stratified = FALSE,
+    num_reps = 50, num_cores = getOption("mc.cores", 2),
+    ...)
 }
 \arguments{
   \item{x}{data matrix with \code{n} observations (rows)
@@ -32,6 +33,9 @@
   similarity score for each bootstrap replication be
   weighted by the number of observations in each of the
   observed clusters? By default, yes (i.e., \code{TRUE}).}
+
+  \item{stratified}{Should the bootstrap replicates be
+  stratified by cluster? By default, no. See Details.}
 
   \item{num_reps}{the number of bootstrap replicates to
   draw for each omitted cluster}
@@ -67,10 +71,10 @@
   perturbation of the data yields a large change in the
   clustering, the original clustering is considered
   unstable. The ClustOmit statistic provides an approach to
-  detecting instability via a stratified, nonparametric
-  resampling scheme. We determine the stability of the
-  clustering via the similarity statistic specified (by
-  default, the Jaccard coefficient).
+  detecting instability via nonparametric bootstrapping. We
+  determine the stability of the clustering via the
+  similarity statistic specified (by default, the Jaccard
+  coefficient).
 }
 \details{
   To compute the ClustOmit statistic, we first cluster the
@@ -85,16 +89,29 @@
   between the cluster labels of the original data set and
   the cluster labels of the bootstrapped sample. We
   approximate the sampling distribution of the ClustOmit
-  statistic using a stratified, nonparametric bootstrapping
-  scheme and use the apparent variability in the
-  approximated sampling distribution as a diagnostic tool
-  for further evaluation of the proposed clusters. By
-  default, we utilize the Jaccard similarity coefficient in
-  the calculation of the ClustOmit statistic to provide a
-  clear interpretation of cluster assessment.  The
-  technical details of the ClustOmit statistic can be found
-  in our forthcoming publication entitled "Cluster
-  Stability Evaluation via Cluster Omission."
+  statistic using a nonparametric bootstrapping scheme and
+  use the apparent variability in the approximated sampling
+  distribution as a diagnostic tool for further evaluation
+  of the proposed clusters. By default, we utilize the
+  Jaccard similarity coefficient in the calculation of the
+  ClustOmit statistic to provide a clear interpretation of
+  cluster assessment. The technical details of the
+  ClustOmit statistic can be found in our forthcoming
+  publication entitled "Cluster Stability Evaluation via
+  Cluster Omission."
+
+  The bootstrap resampling employed randomly samples from
+  the remaining observations after a cluster is omitted. By
+  default, we ensure that one observation is selected from
+  each remaining cluster to avoid potential situations
+  where the resampled data set contains multiple replicates
+  of a single observation. Optionally, by setting the
+  \code{stratified} argument to \code{TRUE}, we employ a
+  stratified sampling scheme, where instead we sample with
+  replacement from each cluster. In this case, the number
+  of observations sampled from a cluster is equal to the
+  number of observations originally assigned to that
+  cluster (i.e., its cluster size).
 
   The ClustOmit cluster stability statistic is based on the
   cluster omission admissibility condition from Fisher and
@@ -138,6 +155,9 @@ clustomit_out2 <- clustomit(x = x, K = 5, cluster_method = kmeans_wrapper,
                             num_cores = 1)
 }
 \references{
+  Ramey, J. A., Sego, L. H., and Young, D. M. (2013),
+  Cluster Stability Evaluation via Cluster Omission.
+
   Fisher, L. and Van Ness, J. (1971), Admissible Clustering
   Procedures, _Biometrika_, 58, 1, 91-104.
 
